syntax = "proto3";

option go_package = "github.com/thegoodparticle/vehicle-data-svc/vehicledata";

package vehicledata;

import "google/protobuf/timestamp.proto";

service VehicleData {
    rpc GetVehicleDataByRegistration(RegistrationRequest) returns (VehicleInfo) {}
    rpc GetVehicleDataByChassisEngine(ChassisEngineNumberRequest) returns (VehicleInfo) {}
    rpc GetOwnerDataByID(OwnerRequest) returns (OwnerInfo) {}
}

message RegistrationRequest {
    string RegistrationNumber = 1;
}

message ChassisEngineNumberRequest {
    string ChassisNumber = 1;
    string EngineNumber = 2;
}

message VehicleInfo {
    string RegistrationNumber = 1;
    string VehicleModel = 2;
    string Company = 3;
    google.protobuf.Timestamp RegistrationDate = 4; 
    google.protobuf.Timestamp RegistrationExpiryDate = 5; 
    string OwnerID = 6;
}

message OwnerRequest {
    string OwnerID = 1;
}

message OwnerInfo {
    string OwnerID = 1;
    string OwnerFirstName = 2;
    string OwnerLastName = 3;
    string MobileNumber = 4;
    string Address = 5;
}